<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launchscreen"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="92dp"
        android:layout_marginTop="65dp"
        android:layout_marginStart="55dp"
        app:srcCompat="@drawable/video_calling" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/labelMail"
        android:layout_marginStart="35dp"
        android:layout_marginTop="165dp"
        android:text="@string/email"
        style="@style/Text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField2"
        style="@style/TextField"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEmail"
            style="@style/Input"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/labelPassword"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/password"
        style="@style/Text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField3"
        style="@style/TextField"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPassword"
            style="@style/Input" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        app:cardElevation="3dp">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/google"
            app:shapeAppearanceOverlay="@style/Image"/>
    </androidx.cardview.widget.CardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonIn"
        style="@style/Button"
        android:layout_marginStart="260dp"
        android:layout_marginTop="30dp"
        android:text="@string/sign_in" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonUp"
        style="@style/Button"
        android:layout_marginStart="260dp"
        app:strokeColor="@color/white"
        android:text="@string/sign_up" />



</LinearLayout>